# prcpp-1sem2022

untitled/: CMakeLists.txt
untitled1/: 3.cpp  CMakeLists.txt
untitled10/: 1.cpp  main.cpp
untitled2/: 7.cpp  CMakeLists.txt
untitled3/: 13.cpp  CMakeLists.txt  mod.cpp
untitled3/12.09 seminar/: 1.cpp  10.cpp  11.cpp  2.cpp  3.cpp  4.cpp  5.cpp  6.cpp  7.cpp  8.cpp  9.cpp
untitled3/2 lab/: 1.10.cpp  1.11.cpp  1.12.cpp  1.13.cpp  1.14_nearest_point.cpp  1.8.cpp  1.9.cpp  2.1.cpp  2.14.cpp  2.2.cpp  2.3.cpp  2.4.cpp  2.5.cpp  2.6.cpp  2.7.cpp  3.12.cpp  3.13.cpp  3.14.cpp  name_of_numbers.cpp
untitled4/: 1_TV_programe.cpp  2_chess_board.cpp  3_circles.cpp  4_find_angel.cpp  5_east_calendar.cpp  6_yesterday(with functions).cpp  CMakeLists.txt  main.cpp
untitled6/: 1_sum_numbers.cpp  2_one_bit.cpp  3_dividers.cpp  4_prime_numbers.cpp  5_divide.cpp  6.cpp  7_palindrome.cpp  8_Mersenne_numbers.cpp  8_fibonachi.cpp  8_pythagoras_triplets.cpp
untitled7/: 1.html  1_1.cpp  1_2.cpp  2.cpp  3.cpp  4.cpp  5.cpp  5_for_1000.cpp  CMakeLists.txt  matanaliz.cpp
untitled8/: 0.1.cpp  0.10.cpp  0.11.cpp  0.2.cpp  0.3.cpp  0.4.cpp  0.5.cpp  0.6.cpp  0.7.cpp  0.9.cpp  0_8.cpp  2_cos.cpp  4_operations.cpp  5_month.cpp  exp.cpp
untitled9/: CMakeLists.txt  declarations.h  main.cpp  task1.cpp  task2.cpp  task3.cpp  task4.cpp  task5.cpp  task6.cpp  task7.cpp  task8.cpp
