cmake_minimum_required(VERSION 3.23)
project(untitled4)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled4 main.cpp)
add_executable(untitled5 4_find_angel.cpp)
add_executable(untitled6 2_chess_board.cpp)
add_executable(untitled7 6_yesterday.cpp)
add_executable(untitled8 1_TV_programe.cpp)
add_executable(untitled9 5_east_calendar.cpp)
