cmake_minimum_required(VERSION 3.23)
project(untitled7)

set(CMAKE_CXX_STANDARD 17)

add_executable(untitled0 1_1.cpp)
add_executable(untitled1 1_2.cpp)
add_executable(untitled2 2.cpp)
add_executable(untitled3 3.cpp)
add_executable(untitled4 4.cpp)
add_executable(untitled5 5.cpp)
add_executable(untitled11 5_exp.cpp)
add_executable(untitled12 5_for_1000.cpp)
add_executable(untitled13 matanaliz.cpp)
